# CG

./: .gitignore  .gitmodules  Accelerator.h  Actor.h  CMakeLists.txt  Common.h  Controller.h  Debugger.h  Entity.cpp  Entity.h  Initializer.h  Loader.cpp  Loader.h  Pipeline.cpp  Pipeline.h  README.md  Rasterizer.cpp  Rasterizer.h  Shader.cpp  Shader.h  System.cpp  System.h  Transformer.cpp  Transformer.h  main.cpp
.github/workflows/: cmake-single-platform.yml
Acceleration/: HAABB.cpp  HAABB.h  HZBuffer.cpp  HZBuffer.h  Parallel.cpp  Parallel.h
